<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/nav_header_container"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_header_layout_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="vertical">
        <callsolve.call.call2solve.CircularImageView
            android:layout_width="@dimen/drawer_circular_image"
            android:layout_height="@dimen/drawer_circular_image"
            android:src="@mipmap/logo"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:civ_border_width="@dimen/drawer_civ_border"
            app:civ_border_color="@color/textColorPrimary"
            android:id="@+id/profileImageView" />
        <TextView
            android:id="@+id/nameTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileImageView"
            android:text="Subhasish Singha"
            android:textColor="@color/colorwhite" />
       </LinearLayout>




    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nav_header_container">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_sales"
                android:id="@+id/homeID"
                android:drawableLeft="@drawable/ic_home_black_24dp"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myprofile"
                android:id="@+id/myProfileID"
                android:layout_below="@+id/homeID"
                android:drawableLeft="@drawable/myprofile"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myorder"
                android:id="@+id/myorder"
                android:layout_below="@+id/myProfileID"
                android:drawableLeft="@mipmap/booking"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:id="@+id/aboutus"
                android:layout_below="@+id/myorder"
                android:drawableLeft="@drawable/aboutus"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servies"
                android:id="@+id/servies"
                android:layout_below="@+id/aboutus"
                android:drawableLeft="@drawable/services"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratecard"
                android:id="@+id/ratecard"
                android:layout_below="@+id/servies"
                android:drawableLeft="@drawable/ratecard"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:id="@+id/media"
                android:layout_below="@+id/ratecard"
                android:drawableLeft="@mipmap/media"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tercondition"
                android:id="@+id/teramcondi"
                android:layout_below="@+id/media"
                android:drawableLeft="@drawable/teamcondition"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reatus"
                android:id="@+id/mycash"
                android:layout_below="@+id/teramcondi"
                android:drawableLeft="@drawable/rateing_bar"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contractus"
                android:id="@+id/contractus"
                android:layout_below="@+id/mycash"
                android:drawableLeft="@drawable/contractus"
                android:gravity="start|center_vertical"
                android:drawablePadding="@dimen/drawer_drawable_padding"
                android:layout_marginLeft="@dimen/drawer_margin_left"
                android:layout_marginTop="@dimen/drawer_margin_left2"
                android:textSize="@dimen/drawer_textview_size"/>
            <LinearLayout
                android:id="@+id/loginLvID"
                android:layout_below="@+id/contractus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_below="@+id/rateserviceID"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="20sp"
                    android:id="@+id/myview1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDD9D9"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/logoutId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_power_settings_new_black_24dp"
                        android:text="@string/logout"
                        android:gravity="start|center_vertical"
                        android:drawablePadding="@dimen/drawer_drawable_padding"
                        android:layout_marginLeft="@dimen/drawer_margin_left"
                        android:layout_marginTop="10sp"
                        android:textSize="@dimen/drawer_textview_size"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>