<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="RtlCompat"
        android:minHeight="@dimen/abc_action_bar_default_height_material">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="end"
            android:src="@mipmap/logo" />

    </androidx.appcompat.widget.Toolbar>
    <!--<LinearLayout-->
    <!--android:id="@+id/viewPagerlv"-->
    <!--android:layout_below="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->
    <!--<android.support.v4.view.ViewPager-->
    <!--android:id="@+id/viewPager"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="150dp" />-->
    <!--<LinearLayout-->
    <!--android:id="@+id/SliderDots"-->
    <!--android:layout_below="@+id/viewPagerlv"-->
    <!--android:orientation="horizontal"-->
    <!--android:gravity="center_vertical|center_horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="10sp"-->
    <!--/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/lv"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:background="@mipmap/acrepair3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvv"
        android:layout_below="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lv5"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/serviceTv"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_star_border_black_24dp"
                android:text="@string/viewservice"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lvrecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/termsconditions"
                />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/booknowtech"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>
